--- a/style.css
+++ b/style.css
@@ -865,7 +865,8 @@ section#rsvp-form {
 }
 
 body.thanks {
-  background: url('mulan.jpg');
+  background-color: #eebea9;
+  background: linear-gradient(rgba(212, 81, 114, 0.37), rgba(63, 128, 172, 0.397)), url('ring.jpg');
   background-size: cover;
   background-attachment: fixed;
   background-position: center center;
