--- a/style.css
+++ b/style.css
@@ -866,7 +866,7 @@ section#rsvp-form {
 
 body.thanks {
   background-color: #eebea9;
-  background: linear-gradient(rgba(212, 81, 114, 0.37), rgba(63, 128, 172, 0.397)), url('ring.jpg');
+  background: linear-gradient(rgba(212, 81, 114, 0.37), rgba(63, 128, 172, 0.397)), url('ring.JPG');
   background-size: cover;
   background-attachment: fixed;
   background-position: center center;
