--- a/style.css
+++ b/style.css
@@ -701,6 +701,7 @@ section#rsvp-form {
 
 #rsvp-form.fadein {
   display: block;
+  animation-fill-mode:forwards;
   -webkit-animation: fadein 3s;
   /* Safari, Chrome and Opera > 12.1 */
   -moz-animation: fadein 3s;
@@ -710,6 +711,7 @@ section#rsvp-form {
   -o-animation: fadein 3s;
   /* Opera < 12.1 */
   animation: fadein 3s;
+  -webkit-animation-fill-mode: forwards;
 }
 
 @keyframes fadein {
